[mxm] Example improved to run different versions