@@ -1,7 +1,11 @@
 
-## If we do not run with TornadoVM:
-# java --enable-preview  --add-modules=jdk.incubator.vector -cp target/tornadovm-examples-1.0-SNAPSHOT.jar io.github.jjfumero.MatrixMultiplication
+## Run Java Sequential only
+tornado -cp target/tornadovm-examples-1.0-SNAPSHOT.jar io.github.jjfumero.MatrixMultiplication onlyJavaSeq
 
-## Otherwise
-tornado -cp target/tornadovm-examples-1.0-SNAPSHOT.jar io.github.jjfumero.MatrixMultiplication
+## Run all Java implementations
+tornado -cp target/tornadovm-examples-1.0-SNAPSHOT.jar io.github.jjfumero.MatrixMultiplication onlyJava
+
+## Run all versions, including TornadoVM
+tornado -cp target/tornadovm-examples-1.0-SNAPSHOT.jar io.github.jjfumero.MatrixMultiplication 
+
 
